@@ -45,6 +45,7 @@
 -- fixed segfaults due to unitialized cleanup_pkt and unset stream_tcp
 -- matched up stream_tcp.policy enum with defines
 -- tweaked S5_TRACE output
+-- fixed alert_fast to default to not print payload
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
